ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/products(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: products-api
                port:
                  number: 8000
          - path: /api/v1/users(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: users-api
                port:
                  number: 8001
#          - path: /consul(/|$)(.*)
#            pathType: Prefix
#            backend:
#              service:
#                name: my-consul
#                port:
#                  number: 8500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: products-api
                port:
                  number: 8000
